--- a/publish.project.json
+++ b/publish.project.json
@@ -9,6 +9,12 @@
 
             "Packages": {
                 "$path": "Packages"
+            },
+
+            "Assets": {
+                "$className": "Folder",
+                "$ignoreUnknownInstances": true,
+                "$path": "src/ReplicatedStorage/Assets"
             }
         },
         "ReplicatedFirst": {
