--- a/wally.toml
+++ b/wally.toml
@@ -17,4 +17,4 @@ BasicState = "csqrl/basicstate@0.2.6"
 Knit = "sleitnick/knit@1.4.7"
 
 # Profile Service
-profileservice = "surnautica/profileservice@1.0.0"
+ProfileService = "surnautica/profileservice@1.0.0"
